# P12_Open_C

./: .gitignore  main.py  poetry.toml  pyproject.toml  readme.md  sqla_models.py
controller/: controller.py  user_controller.py
controllers/: clients_controller.py  contracts_controller.py  events_controller.py  user_controller.py
epic_events/: .coveragerc  .flake8  database.py  first_migration.py  main.py  utils.py
epic_events/controllers/: __init__.py  authenticate_controller.py  click_app.py  clients_controller.py  contracts_controller.py  db_session_controller.py  events_controller.py  roles_controller.py  user_controller.py
epic_events/flake-report/: index.html
epic_events/models/: __init__.py  base.py  client.py  contract.py  event.py  models.py  role.py  user.py
epic_events/tests/: conftest.py  fake_datas.py
epic_events/tests/integration_tests/: test_classic_commercial_path.py  test_classic_managerial_path.py  test_classic_support_path.py
epic_events/tests/temp/: temporary.txt
epic_events/tests/unit_tests/: test_basic_role_func.py  test_basic_user_func.py  test_create.py  test_create_user.py  test_user_controller.py
epic_events/tests/unit_tests/authenticate_controller/: test_login_logout.py
epic_events/tests/unit_tests/clients_controller/: test_create_client.py  test_delete_client.py  (+2 more)
epic_events/views/: clients_views.py  contracts_views.py  events_views.py  roles_views.py  users_view.py
models/: models.py
trash/: run_test_sql.py  sql_models.py
views/: clients_views.py  contracts_views.py  events_views.py  users_view.py
(+16 files in other folders)
