[tool.poetry]
name = "p12"
version = "1.0"
description = "CLI CRM"
authors = ["LGD"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
sqlalchemy = "^2.0.21"
flake8 = "^6.1.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
