[tool.poetry]
name = "epic_events"
version = "1.0"
description = "CLI CRM"
authors = ["LGD"]
readme = "readme.md"
packages = [{include = "epic_events"}]


[tool.poetry.dependencies]
python = "3.11.6"
sqlalchemy = "^2.0.21"
flake8 = "^6.1.0"
psycopg2-binary = "^2.9.9"
click = "^8.1.7"
passlib = "^1.7.4"
argon2-cffi = "^23.1.0"
rich = "^13.6.0"
python-dotenv = "^1.0.0"
pyjwt = "^2.8.0"
pytest = "^7.4.3"
faker = "^19.13.0"
pytz = "^2023.3.post1"
pytest-mock = "^3.12.0"
pytest-sqlalchemy-mock = "^0.1.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


